--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-size: 40px;
-  background-color: #b0a3f0;
+  background-color: #e9a44a;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
